<resources>
    <string name="app_name">mudiralmaham</string>
    <string name="login_label">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_label">Email</string>
    <string name="signUp_recom">No account yet? Create one</string>
    <string name="wait">Wait...</string>
    <string name="add_task">Add Task</string>
    <string name="name_label">Name</string>
    <string name="date_label">Date</string>
    <string name="comment_label">Comment</string>
    <string name="time_pick">Due Time</string>
    <string name="date_pick">Due Tate</string>
    <string name="project_creation_description_label">Description</string>
    <string name="title_activity_main">Tasks</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Themes</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="project_label">Project</string>
    <string name="owner_spinner_label">Owner</string>
    <string name="collaborator_holder_label">Add Collaborator</string>
    <string name="menu_title">Menu</string>
    <string name="mudiralmaham_label">Mudiralmaham</string>
    <string name="menu_add_project">Add Project</string>
    <string name="menu_account">Account</string>
    <string name="pick_color">Choose Theme</string>
    <string name="account_title">Account</string>
    <string name="add_collaborator">Add Collaborator</string>
    <string name="sign_out_menu_label">sign out</string>
</resources>
