<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/menu_title">
        <menu>
            <item android:numericShortcut="1"
                  android:id="@+id/nav_home"
                  android:icon="@drawable/ic_account_circle_black_24dp"
                  android:title="@string/menu_account"/>
            <!--<item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_gallery"/>-->
            <item
                    android:id="@+id/nav_add_project"
                    android:numericShortcut="2"
                    android:icon="@drawable/ic_action_btn"
                    android:title="@string/menu_add_project"/>
            <!--        <item
                            android:id="@+id/nav_tools"
                            android:icon="@drawable/ic_menu_manage"
                            android:title="@string/menu_tools"/>-->
        </menu>
    </item>
    <!--
        <item android:title="Communicate">
            <menu>
                <item
                        android:id="@+id/nav_share"
                        android:icon="@drawable/ic_menu_share"
                        android:title="@string/menu_share"/>
                <item
                        android:id="@+id/nav_send"
                        android:icon="@drawable/ic_menu_send"
                        android:title="@string/menu_send"/>
            </menu>
        </item>
    -->

</menu>
