<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--android:layout_width="match_parent" android:layout_height="match_parent"-->
              <!--android:orientation="vertical" >-->

    <!--<TextView-->
            <!--android:id="@+id/textView1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="TextView" />-->

    <!--<Button-->
            <!--android:id="@+id/button1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Button" />-->

<!--</LinearLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/login_fragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.Dark"
                android:background="@color/colorPrimary"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="48dp"
            android:paddingRight="24dp" android:layout_marginTop="0dp" android:layout_alignParentTop="true">

        <ImageView android:src="@drawable/logo"
                   android:layout_width="120dp"
                   android:layout_height="120dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email_label"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/login_label"/>

        <TextView android:id="@+id/link_signup"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/signUp_recom"
                  android:gravity="center"
                  android:textSize="16dip"/>

    </LinearLayout>
</RelativeLayout>